<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/cropPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_prompt" />

        <Spinner
            android:id="@+id/cropSelectionSpn"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1" />
        
        <TextView
            android:id="@+id/cropLengthPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:text="@string/crop_length_prompt" />

        <RadioGroup
        	android:id="@+id/cropLengthRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"            
            android:orientation="horizontal" >

            <RadioButton
            	android:id="@+id/cropLengthEarly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                    
                android:text="@string/crop_length_early" />

            <RadioButton
                android:id="@+id/cropLengthFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crop_length_full" />
        </RadioGroup>

        <TextView
            android:id="@+id/cropSownPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_sown_prompt" />

        <DatePicker
            android:id="@+id/cropSownDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/prevCropPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_crop_prompt" />

        <Spinner
            android:id="@+id/prevCropSpn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/prevCropStandPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_crop_stand_prompt" />

        <RadioGroup
            android:id="@+id/cropStandRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/poorBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/poor_btn" />

            <RadioButton
                android:id="@+id/fairBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fair_btn" />

            <RadioButton
                android:id="@+id/goodBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_btn" />
        </RadioGroup>

        <TextView
            android:id="@+id/organicMatterPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organic_matter_prompt" />

        <RadioGroup
            android:id="@+id/organicMatterRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/lessOrganicBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/less_organic_btn" />

            <RadioButton
                android:id="@+id/moreOrganicBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_organic_btn" />
                       
        </RadioGroup>
        
    </LinearLayout>
    
</ScrollView>